<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".MainActivity" >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:gravity="center"
            android:text="@string/cadastro" />

        <EditText
            android:id="@+id/nomeEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/nome"
            android:padding="5dp"
            android:layout_margin="5dp"/>

        <EditText
            android:id="@+id/emailEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:hint="@string/email"
            android:padding="5dp"
            android:layout_margin="5dp"/>

        <EditText
            android:id="@+id/telefoneEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="phone"
            android:hint="@string/telefone"
            android:padding="5dp"
            android:layout_margin="5dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/tipoTelefone"
            android:textSize="20sp"
            android:gravity="center"
            android:padding="5dp"
            android:layout_margin="5dp"
            android:labelFor="@+id/tipoTelefoneRg"/>

        <RadioGroup
            android:id="@+id/tipoTelefoneRg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp"
            android:layout_margin="5dp">

            <RadioButton
                android:id="@+id/residencialRb"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Residencial"
                android:checked="true" />

            <RadioButton
                android:id="@+id/comercialRb"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Comercial" />

        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/celular"
            android:textSize="20sp"
            android:gravity="center"
            android:padding="5dp"
            android:layout_margin="5dp"
            android:labelFor="@+id/celularRg"/>

        <Spinner
            android:id="@+id/celularSp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/oppCelular"
            android:padding="5dp"
            android:layout_margin="5dp" />


        <LinearLayout
            android:id="@+id/celularLl"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="5dp"
            android:layout_margin="5dp"
            android:visibility="gone">

            <EditText
                android:id="@+id/celularEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="phone"
                android:hint="@string/addCelular"
                android:padding="5dp"
                android:layout_margin="5dp"/>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/sexo"
            android:textSize="20sp"
            android:gravity="center"
            android:padding="5dp"
            android:layout_margin="5dp"
            android:labelFor="@+id/sexoRg"/>

        <RadioGroup
            android:id="@+id/sexoRg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp"
            android:layout_margin="5dp">

            <RadioButton
                android:id="@+id/masculinoRb"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Masculino"
                android:checked="true" />

            <RadioButton
                android:id="@+id/femininoRb"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Feminino" />

        </RadioGroup>

        <EditText
            android:id="@+id/dataEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/data"
            android:inputType="date"
            android:padding="5dp"
            android:layout_margin="5dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/formacao"
            android:textSize="20sp"
            android:gravity="center"
            android:padding="5dp"
            android:layout_margin="5dp"
            android:labelFor="@+id/FormaçãoSp"/>

        <Spinner
            android:id="@+id/formaçãoSp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/formacao_academica"
            android:padding="5dp"
            android:layout_margin="5dp" />

        <LinearLayout
            android:id="@+id/fundamentalMedioLl"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="5dp"
            android:layout_margin="5dp"
            android:visibility="gone" >

            <EditText
                android:id="@+id/anoFormaturaEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number"
                android:hint="@string/anoFormatura"
                android:padding="5dp"
                android:layout_margin="5dp"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/graduacaoEspecLl"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="5dp"
            android:layout_margin="5dp"
            android:visibility="gone" >

            <EditText
                android:id="@+id/anoConclusaoEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number"
                android:hint="@string/anoConclusao"
                android:padding="5dp"
                android:layout_margin="5dp"/>

            <EditText
                android:id="@+id/instituicaoEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text"
                android:hint="@string/instituicao"
                android:padding="5dp"
                android:layout_margin="5dp"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/mestradoDoutoradoLl"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="5dp"
            android:layout_margin="5dp"
            android:visibility="gone">

            <EditText
                android:id="@+id/anoConclusaoMDEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number"
                android:hint="@string/anoConclusao"
                android:padding="5dp"
                android:layout_margin="5dp"/>

            <EditText
                android:id="@+id/instituicaoMDEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text"
                android:hint="@string/instituicao"
                android:padding="5dp"
                android:layout_margin="5dp"/>

            <EditText
                android:id="@+id/tituloMonografiaEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text"
                android:hint="@string/tituloMonografia"
                android:padding="5dp"
                android:layout_margin="5dp"/>

            <EditText
                android:id="@+id/orientadorEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text"
                android:hint="@string/orientador"
                android:padding="5dp"
                android:layout_margin="5dp"/>

        </LinearLayout>

        <EditText
            android:id="@+id/vagasInteresseEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/vagasInteresse"
            android:inputType="textMultiLine"
            android:padding="5dp"
            android:layout_margin="5dp"/>

        <CheckBox
            android:id="@+id/receberEmailCb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/receberEmail"
            android:padding="5dp"
            android:layout_margin="5dp"/>

        <Button
            android:id="@+id/salvarBt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/salvar"
            android:onClick="onClick"
            android:padding="5dp"
            android:layout_margin="5dp" />

        <Button
            android:id="@+id/limparBt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/limpar"
            android:onClick="onClick"
            android:padding="5dp"
            android:layout_margin="5dp" />


    </LinearLayout>
</ScrollView>